RESOLVED FIXED 152190
Modern IDB: storage/indexeddb/index-basics.html fails
https://bugs.webkit.org/show_bug.cgi?id=152190
Summary Modern IDB: storage/indexeddb/index-basics.html fails
Brady Eidson
Reported 2015-12-11 14:45:37 PST
Modern IDB: storage/indexeddb/index-basics.html fails Error message update will fix it.
Attachments
Patch v1 (2.77 KB, patch)
2015-12-11 14:46 PST, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2015-12-11 14:46:58 PST
Created attachment 267192 [details] Patch v1
Brady Eidson
Comment 2 2015-12-11 15:31:24 PST
Note You need to log in before you can comment on or make changes to this bug.