Modern IDB: storage/indexeddb/index-basics.html fails. https://bugs.webkit.org/show_bug.cgi?id=152190

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

* bindings/js/JSIDBObjectStoreCustom.cpp:
(WebCore::JSIDBObjectStore::createIndex): Custom error message for the TypeError

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/170315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193988 268f45cc-cd09-0410-ab3c-d52691b4dbfc